Fix post update endpoint doc
